test/parser/Queries/syntax_errors/fail_K-ForExprWithout-11.xq
(:******* eq *****foo** where * $ **** ne **foo******** let *foo**** ne ********************:)
(: fooTest: K-ForExprWithout-11          foo        let      foo     :
(: Written by: Frans Englich     for   $                    ne    )
: Date:2006-10-05T18:29:37+02:00                  foo     : ne )
(: Purpose: A  ne test whose essencefoo is: `deep-equal((2, 2), (for $foo in (1,1)  ne return 1 +  let foo for ))`.  for :)
(:***** let *** where ******************************* where ***foo**********foo**:)
deep-equal((2, 2, (for $foo in (1, 1) return 1 + $foo))